@@ -1,17 +1,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.googlecode.cqengine</groupId>
+    <groupId>io.github.msaifasif</groupId>
     <artifactId>cqengine</artifactId>
-    <version>3.6.1-SNAPSHOT</version>
+    <version>1.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
-    <name>CQEngine</name>
-    <description>Collection Query Engine: NoSQL indexing and query engine for Java collections with ultra-low latency</description>
-    <url>http://code.google.com/p/cqengine/</url>
-    <parent>
-        <groupId>org.sonatype.oss</groupId>
-        <artifactId>oss-parent</artifactId>
-        <version>7</version>
-    </parent>
+    <name>CQEngine Next - Maintained Fork</name>
+    <description>CQEngine Next - A maintained fork of the original CQEngine library by Niall Gallagher. Collection Query Engine: NoSQL indexing and query engine for Java collections with ultra-low latency. Updated for Java 21 with modern dependencies.</description>
+    <url>https://github.com/MSaifAsif/cqengine-next</url>
     <licenses>
         <license>
             <name>The Apache Software License, Version 2.0</name>
@@ -20,9 +15,9 @@
         </license>
     </licenses>
     <scm>
-        <url>https://github.com/npgall/${project.artifactId}.git</url>
-        <connection>scm:git:https://github.com/npgall/${project.artifactId}.git</connection>
-        <developerConnection>scm:git:git@github.com:npgall/${project.artifactId}.git</developerConnection>
+        <url>https://github.com/MSaifAsif/cqengine-next.git</url>
+        <connection>scm:git:https://github.com/MSaifAsif/cqengine-next.git</connection>
+        <developerConnection>scm:git:git@github.com:MSaifAsif/cqengine-next.git</developerConnection>
         <tag>HEAD</tag>
     </scm>
     <developers>
@@ -32,29 +27,51 @@
             <email>niall@npgall.com</email>
             <url>http://www.npgall.com</url>
             <roles>
-                <role>owner</role>
+                <role>original author</role>
+            </roles>
+        </developer>
+        <developer>
+            <id>msaifasif</id>
+            <name>Saif Asif</name>
+            <email>saif.asif@example.com</email>
+            <url>https://github.com/MSaifAsif</url>
+            <roles>
+                <role>maintainer</role>
             </roles>
         </developer>
     </developers>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
     </properties>
+    <distributionManagement>
+        <snapshotRepository>
+            <id>ossrh</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
+        <repository>
+            <id>ossrh</id>
+            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+        </repository>
+    </distributionManagement>
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.3.2</version>
+                <version>3.11.0</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>21</source>
+                    <target>21</target>
+                    <release>21</release>
                 </configuration>
             </plugin>
             <plugin>
                 <!-- Add OSGi entries to jar manifest -->
                 <groupId>biz.aQute.bnd</groupId>
                 <artifactId>bnd-maven-plugin</artifactId>
-                <version>3.2.0</version>
+                <version>6.4.0</version>
                 <configuration>
                     <bnd><![CDATA[-exportcontents:com.googlecode.cqengine.*]]></bnd>
                 </configuration>
@@ -67,7 +84,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
-                <version>2.4</version>
+                <version>3.3.0</version>
                 <configuration>
                     <archive>
                         <!-- This is required by bnd-maven-plugin -->
@@ -79,7 +96,7 @@
                 <!-- Deploy a "-sources.jar" along with build -->
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
-                <version>2.1.2</version>
+                <version>3.3.0</version>
                 <executions>
                     <execution>
                         <id>attach-sources</id>
@@ -94,14 +111,7 @@
                 <!-- Deploy a "-javadoc.jar" along with build -->
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.10.3</version>
-                <configuration>
-                    <!--
-                        This is a workaround for javadoc bug in JDK11/12
-                        See: https://bugs.openjdk.java.net/browse/JDK-8212233
-                    -->
-                    <source>8</source>
-                </configuration>
+                <version>3.6.0</version>
                 <executions>
                     <execution>
                         <id>attach-javadocs</id>
@@ -112,25 +122,17 @@
                     </execution>
                 </executions>
             </plugin>
+            <!-- SHADE PLUGIN TEMPORARILY DISABLED DUE TO HANGING ISSUE
+                 The shade plugin causes infinite loops during dependency resolution.
+                 This is a known issue with complex dependency trees and Java 21.
+                 For now, we build only the standard jar without shading dependencies.
+                 To re-enable: uncomment this section and investigate alternatives like maven-assembly-plugin
+            -->
+            <!--
             <plugin>
-                <!--
-                    Build a jar containing all dependencies, by copying classes from all dependency jars directly into
-                    the main jar.
-
-                    The resulting jar can be used as a library in other applications (without requiring any transitive
-                    dependencies of its own).
-
-                    If used as a library in another application, in case the other application also shares any of the
-                    same dependencies, to avoid duplicate class issues resulting from copying dependency classes into
-                    this jar, we relocate classes which are dependencies of this library into a new package within this
-                    jar: com.googlecode.cqengine.lib.*. We then update the bytecode in all classes in this jar to
-                    refer to dependency classes in their new package.
-
-                    Also we configure some transformers to merge open source licences present in any of the jars.
-                 -->
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
-                <version>2.4.3</version>
+                <version>3.5.1</version>
                 <executions>
                     <execution>
                         <phase>package</phase>
@@ -140,42 +142,45 @@
                         <configuration>
                             <shadedArtifactAttached>true</shadedArtifactAttached>
                             <shadedClassifierName>all</shadedClassifierName>
+                            <createDependencyReducedPom>false</createDependencyReducedPom>
+                            <filters>
+                                <filter>
+                                    <artifact>*:*</artifact>
+                                    <excludes>
+                                        <exclude>META-INF/*.SF</exclude>
+                                        <exclude>META-INF/*.DSA</exclude>
+                                        <exclude>META-INF/*.RSA</exclude>
+                                    </excludes>
+                                </filter>
+                            </filters>
                             <relocations>
                                 <relocation>
-                                    <pattern>com.googlecode.concurrenttrees.</pattern>
-                                    <shadedPattern>com.googlecode.cqengine.lib.com.googlecode.concurrenttrees.</shadedPattern>
+                                    <pattern>com.googlecode.concurrenttrees</pattern>
+                                    <shadedPattern>com.googlecode.cqengine.lib.com.googlecode.concurrenttrees</shadedPattern>
                                 </relocation>
                                 <relocation>
-                                    <pattern>com.esotericsoftware.</pattern>
-                                    <shadedPattern>com.googlecode.cqengine.lib.com.esotericsoftware.</shadedPattern>
+                                    <pattern>com.esotericsoftware</pattern>
+                                    <shadedPattern>com.googlecode.cqengine.lib.com.esotericsoftware</shadedPattern>
                                 </relocation>
                                 <relocation>
-                                    <pattern>org.</pattern>
-                                    <shadedPattern>com.googlecode.cqengine.lib.org.</shadedPattern>
-                                    <excludes>
-                                        <!-- Don't relocate SQLite as it will be unable to load its native library... -->
-                                        <exclude>org.sqlite.**</exclude>
-                                    </excludes>
+                                    <pattern>de.javakaffee</pattern>
+                                    <shadedPattern>com.googlecode.cqengine.lib.de.javakaffee</shadedPattern>
                                 </relocation>
                                 <relocation>
-                                    <pattern>de.</pattern>
-                                    <shadedPattern>com.googlecode.cqengine.lib.de.</shadedPattern>
+                                    <pattern>javassist</pattern>
+                                    <shadedPattern>com.googlecode.cqengine.lib.javassist</shadedPattern>
                                 </relocation>
                                 <relocation>
-                                    <pattern>javassist.</pattern>
-                                    <shadedPattern>com.googlecode.cqengine.lib.javassist.</shadedPattern>
+                                    <pattern>org.antlr.v4.runtime</pattern>
+                                    <shadedPattern>com.googlecode.cqengine.lib.org.antlr.v4.runtime</shadedPattern>
                                 </relocation>
                                 <relocation>
-                                    <pattern>com.google.</pattern>
-                                    <shadedPattern>com.googlecode.cqengine.lib.com.google.</shadedPattern>
-                                    <excludes>
-                                        <!-- Don't relocate CQEngine's own classes... -->
-                                        <exclude>com.googlecode.cqengine.**</exclude>
-                                    </excludes>
+                                    <pattern>org.objenesis</pattern>
+                                    <shadedPattern>com.googlecode.cqengine.lib.org.objenesis</shadedPattern>
                                 </relocation>
                                 <relocation>
-                                    <pattern>net.jodah.</pattern>
-                                    <shadedPattern>com.googlecode.cqengine.lib.net.jodah.</shadedPattern>
+                                    <pattern>net.jodah</pattern>
+                                    <shadedPattern>com.googlecode.cqengine.lib.net.jodah</shadedPattern>
                                 </relocation>
                             </relocations>
                             <transformers>
@@ -189,11 +194,12 @@
                     </execution>
                 </executions>
             </plugin>
+            -->
 
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.8.2</version>
+                <version>0.8.11</version>
                 <executions>
                     <execution>
                         <id>default-prepare-agent</id>
@@ -220,6 +226,17 @@
                 </configuration>
             </plugin>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.2.5</version>
+                <configuration>
+                    <argLine>
+                        --add-opens java.base/java.lang=ALL-UNNAMED
+                        --add-opens java.base/java.util=ALL-UNNAMED
+                    </argLine>
+                </configuration>
+            </plugin>
+            <plugin>
                 <groupId>org.antlr</groupId>
                 <artifactId>antlr4-maven-plugin</artifactId>
                 <version>4.10.1</version>
@@ -243,13 +260,13 @@
         <dependency>
             <groupId>org.javassist</groupId>
             <artifactId>javassist</artifactId>
-            <version>3.25.0-GA</version>
+            <version>3.30.2-GA</version>
         </dependency>
 
         <dependency>
             <groupId>org.xerial</groupId>
             <artifactId>sqlite-jdbc</artifactId>
-            <version>3.27.2.1</version>
+            <version>3.45.0.0</version>
         </dependency>
         <dependency>
             <groupId>com.esotericsoftware</groupId>
@@ -313,7 +330,15 @@
         <dependency>
             <groupId>nl.jqno.equalsverifier</groupId>
             <artifactId>equalsverifier</artifactId>
-            <version>3.1.8</version>
+            <version>3.16.1</version>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- ByteBuddy with Java 21 support - overrides version in EqualsVerifier -->
+        <dependency>
+            <groupId>net.bytebuddy</groupId>
+            <artifactId>byte-buddy</artifactId>
+            <version>1.14.11</version>
             <scope>test</scope>
         </dependency>
 
@@ -408,7 +433,7 @@
             </build>
         </profile>
         <profile>
-            <!-- Prevent JavaDoc warnings from failing the build under Java 8... -->
+            <!-- Prevent JavaDoc warnings from failing the build under Java 8+... -->
             <id>doclint-java8-disable</id>
             <activation>
                 <jdk>[1.8,)</jdk>
@@ -419,7 +444,7 @@
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-javadoc-plugin</artifactId>
                         <configuration>
-                            <additionalparam>-Xdoclint:none</additionalparam>
+                            <doclint>none</doclint>
                         </configuration>
                     </plugin>
                 </plugins>
